<resources>
    <string name="app_name">Youtube40</string>
    <string name="playlist">Плейлист</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>
    <string name="_8_video">8 video</string>
    <string name="tod">TODO</string>
    <string name="back">back</string>
</resources>