<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="16dp"
    android:layout_marginHorizontal="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_playlists"
            android:layout_width="120dp"
            android:layout_height="90dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todo1" />
        <RelativeLayout
            android:id="@+id/image_playlist_shadow"
            android:layout_width="120dp"
            android:layout_height="@dimen/big_size_24dp"
            android:layout_gravity="center|bottom"
            android:background="@color/black_trans80"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_in_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="26dp"
            android:text="@string/playlist"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_playlist_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:gravity="top"
        android:text="@string/textview"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_video_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_video_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:gravity="top"
        android:text="@string/_8_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/tv_playlist_title" />

</androidx.constraintlayout.widget.ConstraintLayout>